--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.7.0",
+    "@testing-library/user-event": "^12.7.3",
     "gh-pages": "^3.1.0",
     "modern-normalize": "^1.0.0",
     "react": "^17.0.1",
@@ -41,7 +41,10 @@
     ]
   },
   "devDependencies": {
-    "husky": "^5.0.9",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^5.1.1",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
     "prop-types": "^15.7.2"
